# 3d_celluar_automata

./: .gitignore  Cargo.toml  README.md
assets/shaders/: cell.wgsl
scripts/: build-web.sh  serve-web.sh
src/: cell_renderer.rs  main.rs  neighbours.rs  rotating_camera.rs  rule.rs  utils.rs
src/cells/: mod.rs  sims.rs
src/cells/leddoo/: atomic.rs  mod.rs  single_threaded.rs
src/cells/tantan/: mod.rs  multi_threaded.rs  single_threaded.rs
web/: index.html  style.css
webgpu/: .gitignore  .vercelignore  AGENTS.md  Cargo.toml  README.md  build.rs  index.html  package-lock.json  package.json  rust-toolchain.toml  tsconfig.json  vercel.json
webgpu/.cargo/: config.toml
webgpu/api/: index.rs
webgpu/app/: layout.tsx  page.tsx
webgpu/app/lib/: cell-renderer.ts  cellular-automata.ts  rules.ts
webgpu/app/lib/sim/: reference.ts
webgpu/client/: openapi.json  orval.config.ts  package-lock.json  package.json  tsconfig.json
webgpu/client/src/: index.ts  nextrs-client.ts
webgpu/public/: THIRD_PARTY_NOTICES.txt  style.css
webgpu/scripts/: deploy-prebuilt.sh
webgpu/src/: automaton.ts  cell-renderer.ts  main.rs  main.ts  rules.ts  styles.css  volume-material.ts
webgpu/src/sim/: reference.test.ts
