[package]
name = "celluar_automata"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.19.0", default-features = false, features = ["3d", "webgpu"] }
bevy_egui = { version = "0.41.0", default-features = false, features = ["default_fonts", "render"] }
bytemuck = { version = "1.24.0", features = ["derive"] }
rand = "0.9.2"
web-time = "1.1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
futures-lite = "2.6.1"

[profile.release]
debug = 1

[profile.wasm-release]
inherits = "release"
opt-level = "s"
lto = "thin"
codegen-units = 1
strip = "debuginfo"
